-
Type:
Bug
-
Resolution: Done
-
Priority:
Trivial - P5
-
Affects Version/s: 3.1.3
-
Component/s: Text Search
-
Fully Compatible
-
ALL
-
Platform 5 06/26/16
-
None
-
None
-
None
-
None
-
None
-
None
-
None
There should be a space between "return code" and the value of rc:
uassert(28631,
str::stream() << "Unable to create the context for language "
<< static_cast<int>(language) << " with return code" << rc,
rc == BT_OK);