SERVER-18574: Typo in RLP error message when failing to create language context

GitOrigin-RevId: 9be7c34ddb1403f6cda97d9b4ed98408e32dcf46